adds Sondehub web page access

--- a/app/src/main/res/layout-w1240dp/content_scrolling.xml
+++ b/app/src/main/res/layout-w1240dp/content_scrolling.xml
@@ -14,5 +14,6 @@
         android:layout_marginStart="200dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="200dp"
-        android:text="@string/large_text" />
+        android:text="@string/large_text"
+        android:textSize="16sp" />
 </androidx.core.widget.NestedScrollView>
