--- a/app/src/main/res/layout/webpage_choser.xml
+++ b/app/src/main/res/layout/webpage_choser.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -14,18 +15,18 @@
         android:text="@string/open_web_page"
         />
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
         android:id="@+id/tracker">
-        <ImageView
-            android:layout_width="120dp"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginEnd="5dp"
-            android:background="@color/white"
-            android:src="@drawable/tracker"
+            android:layout_marginEnd="10dp"
+            app:shapeAppearanceOverlay="@style/roundedImageView"
+            app:srcCompat="@drawable/tracker"
             android:contentDescription="@string/sqkxy_tracker_logo" />
         <TextView
             android:layout_width="wrap_content"
@@ -38,17 +39,18 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
         android:layout_margin="10dp"
         android:id="@+id/sondehub">
-        <ImageView
-            android:layout_width="120dp"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginEnd="5dp"
-            android:src="@drawable/sondehub_logo"
+            android:layout_marginEnd="10dp"
+            app:shapeAppearanceOverlay="@style/roundedImageView"
+            app:srcCompat="@drawable/sondehub_logo"
             android:contentDescription="@string/sondehub_logo" />
         <TextView
             android:layout_width="wrap_content"
