--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,13 +14,14 @@
 			android:id="@+id/toolbar_actionbar"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:background="@color/design_default_color_primary_variant"
 			android:theme="@style/Theme.TrovaLaSonda.AppBarOverlay">
 
 			<androidx.appcompat.widget.Toolbar
 				android:id="@+id/toolbar"
 				android:layout_width="match_parent"
 				android:layout_height="?attr/actionBarSize"
-				android:background="?attr/colorPrimary"
+				android:background="?attr/colorPrimaryVariant"
 				app:popupTheme="@style/Theme.TrovaLaSonda.PopupOverlay" />
 
 		</com.google.android.material.appbar.AppBarLayout>
