--- a/app/src/main/res/values/infos.xml
+++ b/app/src/main/res/values/infos.xml
@@ -5,7 +5,8 @@
 You can tap on:\n
 ･ the <u>loudspeaker</u> icon to toggle the TTGO beep\n
 ･ the <u>battery</u> icon to get precise charge level indication\n
-･ the <u>sonde ID</u> to show the <a href='https://www.radiosondy.info'>radiosondy.info</a> page for the sonde\n
+･ the <u>sonde ID</u> to show the <a href='https://www.radiosondy.info'>radiosondy.info</a>
+or <a href='https://tracker.sondehub.org/'>Sondehub</a> page for the sonde\n
 ･ the <u>landing zone</u> (orange circle) to get Google maps directions to the predicted landing site\n
 ･ the <u>explosion</u> icon to get the time of the (predicted or actual) burst local time\n
 ･ the <u>menu</u> icon to show the menu <b>and</b> the sonde coordinates\n
