adds CyclOSM map style

--- a/app/src/main/res/values/infos.xml
+++ b/app/src/main/res/values/infos.xml
@@ -27,6 +27,7 @@ Many friendly people from the
 <a href='https://freesound.org/people/ammaro/sounds/573381'>Ding</a>\n\n
 <b><big>Maps</big></b>\n
 ©<a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a> (<a href='https://opendatacommons.org/licenses/odbl/'>ODbl</a>)\n
+©<a href='https://www.cyclosm.org/'>CyclOSM</a> (<a href='https://creativecommons.org/licenses/by-sa/2.0/'>CC-BY-SA 2.0</a>)
 ©<a href='https://www.mapbox.com/about/maps/'>MapBox</a> (<a href='https://www.mapbox.com/map-feedback/'>Improve this map</a>)\n\n
 <b><big>Libraries</big></b>\n
 <a href='https://github.com/harry1453/android-bluetooth-serial'>android-bluetooth-serial</a> (<a href='https://github.com/harry1453/android-bluetooth-serial/blob/master/LICENSE'>Apache-2.0</a>)\n
