--- a/app/src/main/res/values/infos.xml
+++ b/app/src/main/res/values/infos.xml
@@ -11,9 +11,10 @@ or <a href='https://tracker.sondehub.org/'>Sondehub</a> page for the sonde\n
 ･ the <u>explosion</u> icon to get the time of the (predicted or actual) burst local time\n
 ･ the <u>menu</u> icon to show the menu <b>and</b> the sonde coordinates\n
 ･ the <u>latitude</u> (or logitude) of the sonde to copy it to the clipboard\n\n
-Long tap:\n
-･ any menu item to get an explanation of what it does\n
-･ the <u>latitude</u> of the sonde to copy both coordinates to the clipboard\n\n
+Long tap on:\n
+･ the car menu item to chose the navigatio app to bring you to the sonde current position\n
+･ any other menu item to get an explanation of what it does\n
+･ the <u>latitude</u> or <u>longitude</u> of the sonde to copy both coordinates to the clipboard\n\n
 <b><big>Thanks</big></b>\n
 To <a href='https://www.facebook.com/Dalmonte.Mirko'>Mirko Dalmonte (IZ4PNN)</a> for writing
 the <a href='https://mysondy.altervista.org/mysondygo.php'>MySondyGO</a>TTGO Lora32 firmware and
@@ -27,7 +28,7 @@ Many friendly people from the
 <a href='https://freesound.org/people/ammaro/sounds/573381'>Ding</a>\n\n
 <b><big>Maps</big></b>\n
 ©<a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a> (<a href='https://opendatacommons.org/licenses/odbl/'>ODbl</a>)\n
-©<a href='https://www.cyclosm.org/'>CyclOSM</a> (<a href='https://creativecommons.org/licenses/by-sa/2.0/'>CC-BY-SA 2.0</a>)
+©<a href='https://www.cyclosm.org/'>CyclOSM</a> (<a href='https://creativecommons.org/licenses/by-sa/2.0/'>CC-BY-SA 2.0</a>)\n
 ©<a href='https://www.mapbox.com/about/maps/'>MapBox</a> (<a href='https://www.mapbox.com/map-feedback/'>Improve this map</a>)\n\n
 <b><big>Libraries</big></b>\n
 <a href='https://github.com/harry1453/android-bluetooth-serial'>android-bluetooth-serial</a> (<a href='https://github.com/harry1453/android-bluetooth-serial/blob/master/LICENSE'>Apache-2.0</a>)\n
