fixes minor bugs, adds fw version info field in json

--- a/app/src/main/res/layout/sondetype.xml
+++ b/app/src/main/res/layout/sondetype.xml
@@ -11,6 +11,7 @@
         android:layout_marginBottom="20sp"
         android:textSize="35sp"
         android:layout_gravity="center_horizontal"
+        android:textAlignment="center"
         android:text="@string/sonde_settings"/>
 
     <LinearLayout
