--- a/app/src/main/res/layout/webpage_choser.xml
+++ b/app/src/main/res/layout/webpage_choser.xml
@@ -12,6 +12,7 @@
         android:layout_marginBottom="20sp"
         android:textSize="35sp"
         android:layout_gravity="center_horizontal"
+        android:textAlignment="center"
         android:text="@string/open_web_page"
         />
     <LinearLayout
