--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -272,7 +272,7 @@
             android:src="@android:drawable/ic_menu_preferences"
             android:contentDescription="@string/settings" />
         <ImageView
-            android:id="@+id/help"
+            android:id="@+id/menu_help"
             android:layout_width="fill_parent"
             android:layout_height="60dp"
             android:src="@drawable/ic_question_mark"
