--- a/app/src/main/res/layout/webpage_choser.xml
+++ b/app/src/main/res/layout/webpage_choser.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20sp"
