--- a/app/src/main/res/layout/sondehub_report.xml
+++ b/app/src/main/res/layout/sondehub_report.xml
@@ -1,159 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:textSize="25sp"
-        android:layout_gravity="center_horizontal"
-        android:textAlignment="center"
-        android:text="@string/RECOVERY_REPORT"
-        />
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="10dp"
-        android:id="@+id/sondehub">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/USER"
-                android:textSize="20sp"
-                android:layout_gravity="center_vertical" />
-            <EditText
-                android:id="@+id/user"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:maxLength="10"
-                android:minEms="2"
-                android:selectAllOnFocus="true"
-                tools:ignore="HardcodedText"
-                android:autofillHints="user callsign" />
-        </LinearLayout>
-        <Button
-            android:id="@+id/show_coords"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="10dp"
-            android:text="@string/coord_closed"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
-        android:visibility="gone"
-        android:id="@+id/coords_layout">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/latitude"
-                android:textSize="20sp"
-                android:layout_gravity="center_vertical" />
-            <EditText
-                android:id="@+id/latitude"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:inputType="numberDecimal"
-                android:maxLength="10"
-                android:minEms="2"
-                android:gravity="end"
-                android:selectAllOnFocus="true"
-                android:autofillHints="latitude" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/longitude"
-                android:textSize="20sp"
-                android:layout_gravity="center_vertical" />
-            <EditText
-                android:id="@+id/longitude"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:inputType="numberDecimal"
-                android:maxLength="10"
-                android:minEms="2"
-                android:gravity="end"
-                android:selectAllOnFocus="true"
-                android:autofillHints="longitude" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/altitude"
-                android:textSize="20sp"
-                android:layout_gravity="center_vertical" />
-            <EditText
-                android:id="@+id/altitude"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:inputType="numberDecimal"
-                android:maxLength="10"
-                android:minEms="2"
-                android:gravity="end"
-                android:selectAllOnFocus="true"
-                android:autofillHints="altitude" />
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/description"
-            android:textSize="20sp"
-            android:layout_gravity="center_vertical" />
-        <EditText
-            android:id="@+id/description"
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:lines="5"
-            android:minLines="2"
-            android:maxLines="10"
-            android:minEms="2"
-            android:selectAllOnFocus="true"
-            android:autofillHints="recovery description" />
+            android:layout_marginBottom="10dp"
+            android:textSize="25sp"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            android:text="@string/SONDEHUB_REPORT"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="10dp"
+            android:id="@+id/sondehub">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/USER"
+                    android:textSize="20sp"
+                    android:layout_gravity="center_vertical" />
+                <EditText
+                    android:id="@+id/user"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:maxLength="10"
+                    android:minEms="2"
+                    android:selectAllOnFocus="true"
+                    tools:ignore="HardcodedText"
+                    android:autofillHints="user callsign" />
+            </LinearLayout>
+            <Button
+                android:id="@+id/show_coords"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                android:text="@string/coord_closed"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:id="@+id/coords_layout">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/latitude"
+                    android:textSize="20sp"
+                    android:layout_gravity="center_vertical" />
+                <EditText
+                    android:id="@+id/latitude"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:inputType="numberDecimal"
+                    android:maxLength="10"
+                    android:minEms="2"
+                    android:gravity="end"
+                    android:selectAllOnFocus="true"
+                    android:autofillHints="latitude" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/longitude"
+                    android:textSize="20sp"
+                    android:layout_gravity="center_vertical" />
+                <EditText
+                    android:id="@+id/longitude"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:inputType="numberDecimal"
+                    android:maxLength="10"
+                    android:minEms="2"
+                    android:gravity="end"
+                    android:selectAllOnFocus="true"
+                    android:autofillHints="longitude" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/altitude"
+                    android:textSize="20sp"
+                    android:layout_gravity="center_vertical" />
+                <EditText
+                    android:id="@+id/altitude"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:inputType="numberDecimal"
+                    android:maxLength="10"
+                    android:minEms="2"
+                    android:gravity="end"
+                    android:selectAllOnFocus="true"
+                    android:autofillHints="altitude" />
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/description"
+                android:textSize="20sp"
+                android:layout_gravity="center_vertical" />
+            <EditText
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:lines="5"
+                android:minLines="2"
+                android:maxLines="10"
+                android:minEms="2"
+                android:selectAllOnFocus="true"
+                android:autofillHints="recovery description" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/waitProgress"
+        android:layout_width="50sp"
+        android:layout_height="50sp"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        android:indeterminate="true"
+        app:indicatorColor="@color/design_default_color_primary"
+        app:indicatorSize="120dp"
+        app:trackCornerRadius="10dp"
+        app:trackThickness="16dp"/>
+</FrameLayout>
