--- a/app/src/main/res/layout/webpage_choser.xml
+++ b/app/src/main/res/layout/webpage_choser.xml
@@ -14,8 +14,7 @@
         android:textSize="35sp"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
-        android:text="@string/open_web_page"
-        />
+        android:text="@string/open_web_page"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
