--- a/app/src/main/res/layout/sondehub_report.xml
+++ b/app/src/main/res/layout/sondehub_report.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
@@ -42,11 +42,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:maxLength="10"
-                    android:minEms="2"
+                    android:maxLength="15"
+                    android:layout_marginStart="6dp"
+                    android:minEms="8"
                     android:selectAllOnFocus="true"
-                    tools:ignore="HardcodedText"
-                    android:autofillHints="user callsign" />
+                    tools:ignore="HardcodedText" />
             </LinearLayout>
             <Button
                 android:id="@+id/show_coords"
@@ -54,6 +54,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
                 android:text="@string/coord_closed"
+                android:paddingLeft="1dp"
+                android:paddingRight="1dp"
                 />
         </LinearLayout>
         <LinearLayout
@@ -78,7 +80,6 @@
                     android:id="@+id/latitude"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0"
                     android:inputType="numberDecimal"
                     android:maxLength="10"
                     android:minEms="2"
