--- a/app/src/main/res/values-it/infos.xml
+++ b/app/src/main/res/values-it/infos.xml
@@ -36,7 +36,8 @@ Molti amici del gruppo Facebook
 <a href='https://github.com/harry1453/android-bluetooth-serial'>android-bluetooth-serial</a> (<a href='https://github.com/harry1453/android-bluetooth-serial/blob/master/LICENSE'>Apache-2.0</a>)\n
 <a href='https://github.com/MKergall/osmbonuspack'>osmbonuspack</a> (<a href='https://github.com/MKergall/osmbonuspack/blob/master/LICENSE.md'>GNU Lesser 3.0</a>)\n
 <a href='https://github.com/osmdroid/osmdroid'>osmdroid</a> (<a href='https://github.com/osmdroid/osmdroid/blob/master/LICENSE'>Apache-2.0</a>)\n
-<a href='https://github.com/deano2390/MaterialShowcaseView'>MaterialShowcaseView</a> (<a href='http://www.apache.org/licenses/LICENSE-2.0'>Apache-2.0</a>)\n\n
+<a href='https://github.com/deano2390/MaterialShowcaseView'>MaterialShowcaseView</a> (<a href='http://www.apache.org/licenses/LICENSE-2.0'>Apache-2.0</a>)\n
+<a href='https://github.com/nacular/measured'>measured</a> (<a href='https://github.com/nacular/measured/blob/master/LICENSE'>Licenza personalizzata</a>)\n\n
 <b><big>Predizioni</big></b>\n
 Le predizioni usano il servizio <a href='https://github.com/cuspaceflight/tawhiri'>Tawhiri</a>\n
     </string>
